# Ipponboard

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hgignore  AGENTS.md  AGENTS_GUIDANCE.md  CHANGELOG.md  CHANGELOG.txt  CHANGES.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  DEPRECATED_Ipponboard.pro  DEPRECATED_build.cmd  HOW_TO_BUILD.md  HOW_TO_BUILD_1_QT.md  HOW_TO_BUILD_2_Win.md  HOW_TO_BUILD_3_Linux.md  HowToBuild.md  Ipponboard.pro  LICENSE.md  LICENSE.txt  QT6_MIGRATION.md  README.md  TODO.md  WSL-GAMEPAD.md  astyle.cfg  build.cmd  build.ps1  build.sh  build_cmake_qt4-x86.cmd  build_ipponboard_qt4-x64.cmd  build_qmake_qt4-x86.cmd  build_setup.cmd  copyright_header_template.txt  create_env_cfg-x64.cmd  create_env_cfg-x86.cmd  (+6 more)
GamePadDemo/: GamepadDemo.pro  gamepaddemo.cpp  gamepaddemo.h  gamepaddemo.ui  main.cpp
GamepadDemo/: CMakeLists.txt  DEPRECATED_GamepadDemo.pro  GamepadDemo.cpp  GamepadDemo.h  GamepadDemo.pro  GamepadDemo.ui  Main.cpp
GamepadDemo/cmake_qt4/: CMakeLists.txt
SingleTournament/: Ipponboard.ini  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  SingleTournament.pro  categories.xml  copy_files.cmd  copy_lang.cmd  ipponboard.pro  ipponboard_single.pro  main.cpp  mainwindow.ui  make.cmd  make_vcproj.cmd  translate.cmd  view_vertical_single.ui
TeamTournament/: IpponBoardT.ini  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowTeam.cpp  MainWindowTeam.h  ModeManagerDlg.cpp  ModeManagerDlg.h  ModeManagerDlg.ui  ScoreScreen.cpp  ScoreScreen.h  TeamTournament.pro  TournamentMode.cpp  TournamentMode.h  TournamentModeReader.cpp  TournamentModes.ini  copy_files.cmd  ipponboard_team.pro  list_output.html  main.cpp  mainwindow.ui  make.cmd  make_vcproj.cmd  scorescreen.cpp  scorescreen.h  scorescreen.ui  translate.cmd  view_vertical_team.ui
VersionSelector/: VersionSelector.pro  VersionSelector.rc  copy_files.cmd  main.cpp  maindlg.cpp  maindlg.h  maindlg.ui  translate.cmd
Widgets/: CMakeLists.txt  Countdown.cpp  Countdown.h  Countdown.ui  ScaledImage.cpp  ScaledImage.h  ScaledText.cpp  ScaledText.h  SplashScreen.cpp  SplashScreen.h  splashscreen.ui
_build/: build_Ipponboard.cmd
_build/_cmake_qt4/: CMakeLists.txt
_build/_cmake_qt5/: CMakeLists.txt
_build/win/qt4/_cmake_qt4/: CMakeLists.txt
base/: AddFighterDlg.cpp  AddFighterDlg.h  AddFighterDlg.ui  CMakeLists.txt  Club.h  ClubManager.cpp  ClubManager.h  ClubManagerDlg.cpp  ClubManagerDlg.h  ClubManagerDlg.ui  ClubParser.h  ComboBoxDelegate.cpp  ComboBoxDelegate.h  DEPRECATED_base.pro  DonationManager.cpp  DonationManager.h  FightCategoryManager.cpp  FightCategoryManager.h  FightCategoryManagerDlg.cpp  FightCategoryManagerDlg.h  FightCategoryManagerDlg.ui  FightCategoryParser.cpp  FightCategoryParser.h  FighterList-DEMO.csv  FighterManager.cpp  FighterManager.h  FighterManagerDlg.cpp  FighterManagerDlg.h  FighterManagerDlg.ui  FighterManagerImportDlg.cpp  FighterManagerImportDlg.h  FighterManagerImportDlg.ui  GamepadSectionMapper.cpp  GamepadSectionMapper.h  InputBindingResolver.h  Ipponboard.pro  Ipponboard.qrc  Ipponboard.rc  Main.cpp  MainWindow.cpp  (+96 more)
base/icons/: copy_icons.cmd
base/sounds/: attribution.txt
base/templates/: list_output_bay-qt5.html  list_output_bay.html  list_output_bundesliga-qt5.html  list_output_bundesliga.html  list_output_jugendliga-qt5.html  list_output_jugendliga.html  list_output_mm-qt5.html  list_output_mm.html
base/text/: License_de.html  License_en.html  License_team_de.html
cmake/: IpponboardCatch2.cmake  IpponboardDeploy.cmake
cmake_qt4/: CMakeLists.txt
core/: CMakeLists.txt  Controller.cpp  Controller.h  ControllerConfig.h  DataSerializer.cpp  DataSerializer.h  EditionType.h  EnumStrings.h  Enums.h  Fight.cpp  Fight.h  FightCategory.cpp  FightCategory.h  Fighter.cpp  Fighter.h  MsmIncludes.h  Rules.cpp  Rules.h  Score.cpp  Score.h  StateMachine.cpp  StateMachine.h  TimerService.cpp  TimerService.h  Tournament.h  TournamentMode.cpp  TournamentMode.h  TournamentModel.cpp  TournamentModel.h  TournamentNavigator.cpp  TournamentNavigator.h  TournamentRepository.cpp  TournamentRepository.h  controller.cpp  controller.h  core.pro  enums.h  fightcategory.h  fighter.cpp  fighter.h  (+14 more)
doc/: Anleitung.odt  Anleitung.tcp  Anleitung.tex  Ipponboard.css  Turnierplanung.md  USER_MANUAL-DE.md  USER_MANUAL-EN.md  a.md  anleitung.md  architecture-model.c4  build_doc.cmd  cleanup.cmd  (+7 more)
gamepad/: CMakeLists.txt  Gamepad.cpp  Gamepad.h  GamepadImpl.h  GamepadLinux.cpp  GamepadLinux.h  GamepadLinuxImpl.cpp  GamepadLinuxImpl.h  GamepadTypes.h  GamepadWin.cpp  GamepadWin.h  GamepadWinImpl.cpp  GamepadWinImpl.h  IGamepadImpl.h  JessTechPadAdapter.h  JessTechPadAdapterLinux.cpp  JessTechPadAdapterStub.cpp  gamepad.cpp  gamepad.h  gamepad.pro  make_vcproj.cmd
test/: CMakeLists.txt  ControllerTestHelpers.h  DEPRECATED_test.pro  IpponboardTest.cpp  Test-path_helpers.cpp  TestController.cpp  TestDataPath.h  TestDataPaths.h  TestFight.cpp  TestFight.hpp  TestFighter.cpp  TestFighterManager.cpp  TestGamepadButtonCode.cpp  TestGamepadSectionMapper.cpp  TestGamepadSections.cpp  TestInputBindingResolver.cpp  TestJson.cpp  TestJson.hpp  TestOnlineVersionChecker.cpp  TestQStringHelper.cpp  TestQtApp.h  TestRawInputCapture.cpp  TestRules.cpp  TestScore.cpp  TestScore.hpp  TestSimpleCsvFile.cpp  TestStateMachine.cpp  TestTomlParser.cpp  TestTournamentMode.cpp  TestTournamentMode.hpp  TestTournamentModel.cpp  TestTournamentSerialization.cpp  TestUpdateChecker.cpp  TestVersionComparer.cpp  TestVersionComparer.hpp  TestView.cpp  TournamentModes-test.ini  catch2.runsettings  generate_vc_proj.cmd  run_tests.cmd  (+3 more)
test/TestData/: IpponboardAutosaveJson.h  TournamentModes-test.ini  current_version.xml  latest_version.json  utf8.json  utf8.toml  utf8_with_bom.json  utf8_with_bom.toml
test/_build_cmake_qt4/: cmake_install.cmake
test/_cmake_qt4/: CMakeLists.txt
test/_cmake_qt5/: CMakeLists.txt
test/cmake_qt4/: CMakeLists.txt
test/cmake_qt5/: CMakeLists.txt
test_network/: CMakeLists.txt  TestOnlineVersionChecker_network.cpp
(+158 files in other folders)
